--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -23,6 +23,9 @@ $color__railblue:rgba(11,69,89,1);
 $color__coral:rgba(255,127,81,1);
 $color__yellow:rgba(255,215,80,1);
 
+//color wrap links
+$color__railred--seemore :rgba(250,235,234,1);
+
 
 
 /* BASIC STYLES
