--- a/scss/modules/_typography.scss
+++ b/scss/modules/_typography.scss
@@ -16,7 +16,7 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 /* Larger than phablet */
 @media (min-width: 550px) {
   h1 { font-size: 5.0rem; }
-  h2 { font-size: 2.2rem; }
+  h2 { font-size: 2.4rem; }
   h3 { font-size: 3.6rem; }
   h4 { font-size: 3.0rem; }
   h5 { font-size: 2.4rem; }
@@ -30,7 +30,8 @@ p {
     font-weight: 300;
     letter-spacing: 0.03rem;
     @media (#{$bp-larger-than-mobile}) {font-size: 1.7rem;}
-    @media (#{$bp-larger-than-phablet}) {font-size: 1.65rem;}
+    @media (#{$bp-larger-than-tablet}) {font-size: 1.5rem;}
+    @media (#{$bp-larger-than-desktophd}) {font-size: 1.7rem;}
 }
 
 
@@ -51,16 +52,9 @@ a {
 
 /* SPECIAL CLASSES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-h2.underline{
-  @media (#{$bp-larger-than-mobile}) {
-    text-align:center;
-  }
-  @media (#{$bp-larger-than-tablet}) {
-    text-align: left;
-  }
-  > a{ 
+
+ a.underline{ 
     position: relative;
-    font-size: 1.5rem;
     left: 0;
     color:#fffef3;
     text-decoration: none;
@@ -86,4 +80,3 @@ h2.underline{
       transform:scaleX(0);
     }
   }
-}
