--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -20,11 +20,15 @@ $color__black--60:rgba(35, 31, 32, 0.3);
 $color__railred:rgba(207, 74, 55, 1);
 $color__railred--dark:rgba(134, 18, 3, 1);
 $color__railblue:rgba(11,69,89,1);
+
+
+//color wrap on links
+$color__railred--seemore :rgba(250,235,234,1);
 $color__coral:rgba(255,127,81,1);
 $color__yellow:rgba(255,215,80,1);
-
-//color wrap links
-$color__railred--seemore :rgba(250,235,234,1);
+$color__deep-purple:rgba(68,20,111,1);
+$color__deep-purple--seemore: rgba(253,258,255,1);
+$color__deep-purple--dj: rgba(209,95,238,1);
 
 
 
