--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -358,15 +358,20 @@ figcaption{position:relative;
 /* POST PAGE
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .post{
+  .row{
+    // p:first-of-type::first-letter{float: left; color: #903; font-size: 5rem; line-height: 5rem; font-weight:400; padding-top: 4px; padding-right: 6px; padding-left: 3px;}
+  }
 
   @media (#{$bp-larger-than-mobile}) {
     .row{
       padding: 0 1rem;
+
     }
   }
   @media (#{$bp-larger-than-tablet}) {
   .row{
       padding: 0rem;
+
     }
     margin-bottom: 4rem;
   }
@@ -375,6 +380,8 @@ figcaption{position:relative;
 
   .container{
   }
+
+  
   h2{
     @media (#{$bp-larger-than-mobile}) {text-align: center; padding-bottom:1.5rem;}
     @media (#{$bp-larger-than-tablet}) {text-align:left;}
@@ -646,3 +653,7 @@ footer.foot{
     width: 96%;
     border: 1px solid $color__black;
   }
+
+
+
+
