beginning work on deleting sliding menu section for web

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -23,12 +23,13 @@ $color__railblue:rgba(11,69,89,1);
 
 
 //color wrap on links
-$color__railred--seemore :rgba(250,235,234,1);
+$color__railred--seemore :rgba(250,255,244,1);
 $color__coral:rgba(255,127,81,1);
 $color__yellow:rgba(255,215,80,1);
 $color__deep-purple:rgba(68,20,111,1);
 $color__deep-purple--seemore: rgba(253,258,255,1);
 $color__deep-purple--dj: rgba(209,95,238,1);
+$color__white: rgba(255,255,255,1);
 
 
 
