--- a/css/main.css
+++ b/css/main.css
@@ -1087,7 +1087,7 @@ hr {
 /*header section*/
 header {
   z-index: 30;
-  background: #cf4a37;
+  background: #231f20;
   width: 100%;
   padding: 1rem;
   position: fixed;
@@ -1113,7 +1113,7 @@ header {
       height: 4.8rem; } }
   @media (min-width: 750px) {
     header {
-      height: 8rem; } }
+      height: 4rem; } }
   header .logo {
     position: relative;
     margin-top: 0.3rem;
@@ -1132,6 +1132,10 @@ header {
         max-width: 70px; } }
     header .logo:hover {
       opacity: 0.8; }
+  header .menu ul li {
+    display: inline; }
+    header .menu ul li a {
+      color: #fffef9; }
 
 header.smaller {
   height: 0rem;
@@ -1201,7 +1205,7 @@ header.smaller {
 .color-wrap--railred {
   background-color: #cf4a37; }
   .color-wrap--railred .see-more {
-    color: #faebea;
+    color: #fafff4;
     border-bottom: 1px solid #cf4a37; }
     .color-wrap--railred .see-more:hover {
       color: white;
