--- a/scss/modules/_typography.scss
+++ b/scss/modules/_typography.scss
@@ -25,13 +25,13 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 p {
     margin-top: 0;
-    color: $color__black--80;
+    color: $color__black;
     font-family: $font__serif;
-    font-weight: 300;
-    letter-spacing: 0.03rem;
-    @media (#{$bp-larger-than-mobile}) {font-size: 1.7rem;}
+    font-weight:200;
+    letter-spacing: 0.01rem;
+    @media (#{$bp-larger-than-mobile}) {font-size: 1.5rem;}
     @media (#{$bp-larger-than-tablet}) {font-size: 1.5rem;}
-    @media (#{$bp-larger-than-desktophd}) {font-size: 1.7rem;}
+    @media (#{$bp-larger-than-desktophd}) {font-size: 1.5rem;}
 }
 
 
