--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700|Merriweather:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700|Cutive+Mono);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -55,7 +55,6 @@ html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%;
-  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased; }
 
 body {
@@ -92,7 +91,7 @@ ol ul {
 
 li {
   margin-bottom: 0.75rem;
-  font-family: "Merriweather", serif;
+  font-family: ‘Courier New’, Courier, monospace;
   font-weight: 200; }
 
 /* CODE
@@ -299,19 +298,19 @@ h6 {
     font-size: 1.5rem; } }
 p {
   margin-top: 0;
-  color: rgba(35, 31, 32, 0.8);
-  font-family: "Merriweather", serif;
-  font-weight: 300;
-  letter-spacing: 0.03rem; }
+  color: #231f20;
+  font-family: ‘Courier New’, Courier, monospace;
+  font-weight: 200;
+  letter-spacing: 0.01rem; }
   @media (min-width: 320px) {
     p {
-      font-size: 1.7rem; } }
+      font-size: 1.5rem; } }
   @media (min-width: 750px) {
     p {
       font-size: 1.5rem; } }
   @media (min-width: 1200px) {
     p {
-      font-size: 1.7rem; } }
+      font-size: 1.5rem; } }
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -1091,7 +1090,7 @@ header {
   width: 100%;
   padding: 1rem;
   position: fixed;
-  text-align: center;
+  text-align: left;
   top: 0;
   /*drop the header*/
   -moz-animation-name: dropHeader;
@@ -1113,29 +1112,51 @@ header {
       height: 4.8rem; } }
   @media (min-width: 750px) {
     header {
-      height: 4rem; } }
+      height: 5rem; } }
   header .logo {
     position: relative;
-    margin-top: 0.3rem;
-    left: -1rem;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s; }
+    left: 1.3rem;
+    top: 0rem;
+    margin-top: 0;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s; }
     @media (min-width: 320px) {
       header .logo {
-        max-width: 40px; } }
+        max-width: 42px; } }
     @media (min-width: 550px) {
       header .logo {
-        max-width: 40px;
-        top: 0rem; } }
+        max-width: 42px; } }
     @media (min-width: 750px) {
       header .logo {
-        max-width: 70px; } }
+        max-width: 42px; } }
     header .logo:hover {
       opacity: 0.8; }
-  header .menu ul li {
-    display: inline; }
-    header .menu ul li a {
-      color: #fffef9; }
+  header .menu {
+    position: relative;
+    top: -7px;
+    left: 1.5rem; }
+    @media (min-width: 320px) {
+      header .menu {
+        display: none; } }
+    @media (min-width: 750px) {
+      header .menu {
+        display: none;
+        display: inline-block; } }
+    header .menu ul li {
+      display: inline;
+      font-weight: 600;
+      vertical-align: top;
+      margin: 0 3rem; }
+      header .menu ul li a {
+        color: #fffef9; }
+        header .menu ul li a:hover {
+          text-decoration: line-through; }
+    @media (min-width: 320px) {
+      header .menu--mobile {
+        display: inline-block; } }
+    @media (min-width: 1000px) {
+      header .menu--mobile {
+        display: none; } }
 
 header.smaller {
   height: 0rem;
@@ -1167,13 +1188,14 @@ header.smaller {
     color: #fffef9; }
     .color-wrap .wrap-title h2 {
       font-size: 3rem;
-      font-family: "Merriweather", serif;
+      font-family: "Lato", sans-serif;
       margin-bottom: 0;
       line-height: 0; }
     .color-wrap .wrap-title span {
       opacity: 0.75; }
   .color-wrap .see-more {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    font-family: ‘Courier New’, Courier, monospace;
     text-transform: uppercase;
     letter-spacing: 0.15rem;
     padding-bottom: 0.5rem; }
@@ -1279,7 +1301,7 @@ ul.podcast-covers {
 /* POSTS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .main {
-  margin-top: 1rem; }
+  margin-top: 0rem; }
 
 @media (min-width: 320px) {
   .post__large {
@@ -1294,7 +1316,7 @@ ul.podcast-covers {
     height: 520px; } }
 @media (min-width: 1000px) {
   .post__large {
-    max-height: 768px;
+    max-height: 800px;
     height: 100vh;
     padding-top: 0rem;
     padding-bottom: 0rem;
@@ -1318,9 +1340,38 @@ ul.podcast-covers {
       width: 50%;
       height: 100%; } }
 
+.home__cat__title {
+  font-family: ‘Courier New’, Courier, monospace; }
+
+.post__large--feat-fullscreen {
+  float: left;
+  display: block;
+  width: 50%;
+  background-color: #fffef9;
+  position: relative; }
+  @media (min-width: 320px) {
+    .post__large--feat-fullscreen {
+      width: 100%;
+      height: 80%; } }
+  @media (min-width: 750px) {
+    .post__large--feat-fullscreen {
+      width: 100%;
+      height: 100%; } }
+  .post__large--feat-fullscreen h1 {
+    position: absolute;
+    display: block;
+    background: rgba(35, 31, 32, 0.8);
+    bottom: 0;
+    right: 0rem;
+    padding: 2rem;
+    font-size: 1.5rem;
+    text-align: left;
+    color: #fffef9;
+    font-family: ‘Courier New’, Courier, monospace; }
+
 @media (min-width: 320px) {
   .post__large--excerpt {
-    padding: 3rem 3rem;
+    padding: 2rem 2rem;
     text-align: center;
     position: relative;
     top: 0rem;
@@ -1331,12 +1382,12 @@ ul.podcast-covers {
     transform: translateY(0%); } }
 @media (min-width: 750px) {
   .post__large--excerpt {
-    padding: 6rem 3rem; } }
+    padding: 3rem 3rem; } }
 @media (min-width: 1000px) {
   .post__large--excerpt {
-    padding: 0 10rem;
+    padding: 0 7rem;
     position: relative;
-    top: 55%;
+    top: 50%;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
@@ -1548,7 +1599,7 @@ footer.foot {
       list-style-type: none;
       margin: 0;
       line-height: 3rem;
-      font-family: "Merriweather", serif;
+      font-family: ‘Courier New’, Courier, monospace;
       box-sizing: border-box; }
       footer.foot ul li a {
         color: #fffef9;
@@ -1610,7 +1661,7 @@ footer.foot {
   .covers {
     text-align: left; } }
 .covers h2 {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   display: block;
   max-height: 25px;
   overflow: hidden; }
@@ -1655,11 +1706,11 @@ footer.foot {
 @media (min-width: 750px) {
   .fuller {
     padding: 4%;
-    padding-top: 11rem; } }
+    padding-top: 10rem; } }
 @media (min-width: 1000px) {
   .fuller {
     padding: 4%;
-    padding-top: 13rem; } }
+    padding-top: 10rem; } }
 
 .orange {
   background-color: orange; }
@@ -1673,6 +1724,17 @@ footer.foot {
 
 iframe {
   width: 98%; }
+
+.post .buybutton {
+  font-size: 1.2rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  border: 1px solid #cf4a37;
+  padding: 0.2rem 0.5rem; }
+  .post .buybutton:hover {
+    background-color: #cf4a37;
+    color: white;
+    border-bottom: 1px solid #cf4a37; }
 
 
 
